syntax = "proto3";

package a2a;

option go_package = "adk/a2a/server;server";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service A2AService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}

  rpc GetTask(GetTaskRequest) returns (Task) {}
}

enum TaskState {
  TASK_STATE_UNSPECIFIED = 0;
  TASK_STATE_COMPLETED = 1;
  TASK_STATE_WORKING = 2;
  TASK_STATE_FAILED = 3;
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_USER = 1;
  ROLE_ASSISTANT = 2;
  ROLE_SYSTEM = 3;
}

message Artifact {
  string id = 1;
  string type = 2;
  string content = 3;
  google.protobuf.Struct metadata = 4;
}

message Task {
  string id = 1;
  string context_id = 2;
  TaskState status = 3;
  repeated Artifact artifacts = 4;
  repeated Message history = 5;
  google.protobuf.Struct metadata = 6;
}

message Message {
  string message_id = 1;
  string context_id = 2;
  string task_id = 3;
  Role role = 4;
  string content = 5;
  google.protobuf.Struct metadata = 6;
}


message SendMessageRequest {
  Message request = 1;
  google.protobuf.Struct metadata = 2;
}

message SendMessageResponse {
  Task task = 1;
}

message GetTaskRequest {
  string name = 1;
}

